--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
       - db_data:/var/lib/postgresql/data
     healthcheck:
       test: pg_isready -U postgres
-
   shutter:
     build:
       context: shutter
@@ -16,7 +15,7 @@ services:
         UPSTREAM_VERSION: v1.3.0-api
         KEYPER_CONFIG_DIR: /keyper/config
         SHUTTER_CHAIN_DIR: /chain
-        STAKER_SCRIPTS_VERSION: v0.1.0
+        STAKER_SCRIPTS_VERSION: v0.1.1
     restart: unless-stopped
     environment:
       SHUTTER_API_NODE_PRIVATEKEY: ""
@@ -26,7 +25,6 @@ services:
     volumes:
       - chain:/chain
       - keyper-config:/keyper/config
-
   metrics:
     build:
       context: metrics
@@ -34,12 +32,11 @@ services:
     environment:
       SHUTTER_PUSH_METRICS_ENABLED: true
       KEYPER_NAME: ""
-      PUSHGATEWAY_URL: "https://keyperingest.metrics.shutter.network/api/v1/write"
+      PUSHGATEWAY_URL: https://keyperingest.metrics.shutter.network/api/v1/write
       PUSHGATEWAY_USERNAME: ""
       PUSHGATEWAY_PASSWORD: ""
     volumes:
       - metrics-config:/config
-
 volumes:
   db_data: {}
   chain: {}
