--- a/metrics/config/gnosis/vmagent.yml
+++ b/metrics/config/gnosis/vmagent.yml
@@ -4,7 +4,7 @@ global:
 scrape_configs:
   - job_name: 'keyper'
     static_configs:
-      - targets: ["shutter.shutter-api-%{NETWORK}.dappnode:9200"]
+      - targets: ["shutter.shutter-api-gnosis.dappnode:9200"]
         labels:
           instance: "kpr-%{KEYPER_NAME}"
           deployment: "%{_ASSETS_VERSION}"
@@ -13,7 +13,7 @@ scrape_configs:
   - job_name: 'shuttermint'
     metrics_path: /
     static_configs:
-      - targets: ["shutter.shutter-api-%{NETWORK}.dappnode:9200"]
+      - targets: ["shutter.shutter-api-gnosis.dappnode:9200"]
         labels:
           instance: "kpr-%{KEYPER_NAME}"
           deployment: "%{_ASSETS_VERSION}"
