Add loki logpush via promtail
This aims to recreate the functionality from
https://github.com/shutter-network/shutter-keyper-deployment/pull/10
usable with the DAppnodePackage.

Because we can not install the docker loki plugin, and everything is running
in one container through supervisord, we need to resort to promtail and
some extra log redirections to keep the docker logging working.

--- a/setup-wizard.yml
+++ b/setup-wizard.yml
@@ -31,6 +31,18 @@ fields:
       service: shutter
     required: true
 
+  - id: enable_push_logs
+    title: Enable Push Logs
+    description: |
+      Enable the push logs feature to send logs to an external server controlled by Shutter.
+    target:
+      type: environment
+      name: SHUTTER_PUSH_LOGS_ENABLED
+      service: [shutter, metrics]
+    enum:
+      - "true"
+      - "false"
+
   - id: enable_push_metrics
     title: Enable Push Metrics
     description: |
@@ -46,7 +58,7 @@ fields:
   - id: pushgateway_url
     title: Pushgateway URL
     description: |
-      The URL of the Pushgateway server to send metrics to.
+      The URL of the Pushgateway server to send metrics/logs to.
     target:
       type: environment
       name: PUSHGATEWAY_URL
