--- a/shutter/supervisord.conf
+++ b/shutter/supervisord.conf
@@ -18,7 +18,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///var/run/supervisor.sock
 
 [program:configure]
-command = configure.sh
+command = run_configure.sh
 priority = 1
 autostart = true
 autorestart = false
@@ -42,6 +42,17 @@ stderr_logfile_maxbytes = 0
 command = run_keyper.sh
 priority = 3
 autostart = false # Only started after chain is healthy
+startretries = 9999  ; A large number enough to cover node updates
+autorestart = true
+stdout_logfile = /dev/stdout
+stdout_logfile_maxbytes = 0
+stderr_logfile = /dev/stderr
+stderr_logfile_maxbytes = 0
+
+[program:promtail]
+command = run_promtail.sh
+priority = 4
+autostart = true
 startretries = 9999  ; A large number enough to cover node updates
 autorestart = true
 stdout_logfile = /dev/stdout
