--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,14 @@ services:
         STAKER_SCRIPTS_VERSION: v0.1.1
     restart: unless-stopped
     environment:
-      SHUTTER_API_NODE_PRIVATEKEY: ""
-      SHUTTER_PUSH_METRICS_ENABLED: false
-      KEYPER_NAME: ""
-      ETHEREUM_WS: ""
+      - SHUTTER_API_NODE_PRIVATEKEY=""
+      - SHUTTER_PUSH_METRICS_ENABLED=false
+      - KEYPER_NAME=""
+      - ETHEREUM_WS=""
+      - SHUTTER_PUSH_LOGS_ENABLED
+      - PUSHGATEWAY_USERNAME
+      - PUSHGATEWAY_PASSWORD
+      - HOSTNAME
     volumes:
       - chain:/chain
       - keyper-config:/keyper/config
