--- a/shutter/supervisord.conf
+++ b/shutter/supervisord.conf
@@ -55,6 +55,7 @@ priority = 4
 autostart = true
 startretries = 9999  ; A large number enough to cover node updates
 autorestart = true
+environment = HOSTNAME=%(ENV_HOSTNAME),PUSHGATEWAY_USERNAME=%(ENV_PUSHGATEWAY_USERNAME),PUSHGATEWAY_PASSWORD=%(ENV_PUSHGATEWAY_PASSWORD),SHUTTER_PUSH_LOGS_ENABLED=%(ENV_SHUTTER_PUSH_LOGS_ENABLED)
 stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
