Adjust to supervisord fmt string syntax

--- a/shutter/supervisord.conf
+++ b/shutter/supervisord.conf
@@ -55,7 +55,7 @@ priority = 4
 autostart = true
 startretries = 9999  ; A large number enough to cover node updates
 autorestart = true
-environment = HOSTNAME=%(ENV_HOSTNAME),PUSHGATEWAY_USERNAME=%(ENV_PUSHGATEWAY_USERNAME),PUSHGATEWAY_PASSWORD=%(ENV_PUSHGATEWAY_PASSWORD),SHUTTER_PUSH_LOGS_ENABLED=%(ENV_SHUTTER_PUSH_LOGS_ENABLED)
+environment = HOSTNAME="%(ENV_HOSTNAME)s",PUSHGATEWAY_USERNAME="%(ENV_PUSHGATEWAY_USERNAME)s",PUSHGATEWAY_PASSWORD="%(ENV_PUSHGATEWAY_PASSWORD)s",SHUTTER_PUSH_LOGS_ENABLED="%(ENV_SHUTTER_PUSH_LOGS_ENABLED)s"
 stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
