Fix promtail env expansion

--- a/shutter/promtail_config.yaml
+++ b/shutter/promtail_config.yaml
@@ -8,8 +8,8 @@ positions:
 client:
   url: https://logs.metrics.shutter.network/insert/loki/api/v1/push
   basic_auth:
-    username: $(PUSHGATEWAY_USERNAME)
-    password: $(PUSHGATEWAY_PASSWORD)
+    username: ${PUSHGATEWAY_USERNAME}
+    password: ${PUSHGATEWAY_PASSWORD}
 
 scrape_configs:
  - job_name: configure
@@ -20,7 +20,7 @@ scrape_configs:
       - localhost
      labels:
       job: configure
-      host: $(HOSTNAME)
+      host: ${HOSTNAME}
       __path__: /tmp/configure.log
 
  - job_name: keyper
@@ -31,7 +31,7 @@ scrape_configs:
       - localhost
      labels:
       job: keyper
-      host: $(HOSTNAME)
+      host: ${HOSTNAME}
       __path__: /tmp/keyper.log
 
  - job_name: chain
@@ -42,5 +42,5 @@ scrape_configs:
       - localhost
      labels:
       job: chain
-      host: $(HOSTNAME)
+      host: ${HOSTNAME}
       __path__: /tmp/chain.log
