Conditionally start promtail

--- a/shutter/supervisord.conf
+++ b/shutter/supervisord.conf
@@ -50,11 +50,11 @@ stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
 
 [program:promtail]
-command = run_promtail.sh
+command = run_promtail.sh ; we ingest 'rotatelogs' managed logfiles -- there is potential for some missed log lines.
 priority = 4
-autostart = true
+autostart = %(ENV_SHUTTER_PUSH_LOGS_ENABLED)s
 startretries = 9999  ; A large number enough to cover node updates
-autorestart = true
+autorestart = %(ENV_SHUTTER_PUSH_LOGS_ENABLED)s
 environment = HOSTNAME="%(ENV_HOSTNAME)s",PUSHGATEWAY_USERNAME="%(ENV_PUSHGATEWAY_USERNAME)s",PUSHGATEWAY_PASSWORD="%(ENV_PUSHGATEWAY_PASSWORD)s",SHUTTER_PUSH_LOGS_ENABLED="%(ENV_SHUTTER_PUSH_LOGS_ENABLED)s"
 stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
