--- a/setup-wizard.yml
+++ b/setup-wizard.yml
@@ -73,7 +73,7 @@ fields:
     target:
       type: environment
       name: PUSHGATEWAY_USERNAME
-      service: metrics
+      service: [metrics, shutter]
     required: false
     if: { enable_push_metrics: { "enum": ["true"] } }
 
@@ -84,7 +84,7 @@ fields:
     target:
       type: environment
       name: PUSHGATEWAY_PASSWORD
-      service: metrics
+      service: [metrics, shutter]
     required: false
     secret: true
     if: { enable_push_metrics: { "enum": ["true"] } }
