--- a/shutter/supervisord.conf
+++ b/shutter/supervisord.conf
@@ -55,7 +55,7 @@ priority = 4
 autostart = %(ENV_SHUTTER_PUSH_LOGS_ENABLED)s
 startretries = 9999  ; A large number enough to cover node updates
 autorestart = %(ENV_SHUTTER_PUSH_LOGS_ENABLED)s
-environment = HOSTNAME="%(ENV_HOSTNAME)s",PUSHGATEWAY_USERNAME="%(ENV_PUSHGATEWAY_USERNAME)s",PUSHGATEWAY_PASSWORD="%(ENV_PUSHGATEWAY_PASSWORD)s",SHUTTER_PUSH_LOGS_ENABLED="%(ENV_SHUTTER_PUSH_LOGS_ENABLED)s"
+environment = KEYPER_NAME="%(ENV_KEYPER_NAME)s",PUSHGATEWAY_USERNAME="%(ENV_PUSHGATEWAY_USERNAME)s",PUSHGATEWAY_PASSWORD="%(ENV_PUSHGATEWAY_PASSWORD)s",SHUTTER_PUSH_LOGS_ENABLED="%(ENV_SHUTTER_PUSH_LOGS_ENABLED)s"
 stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
