--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - SHUTTER_API_NODE_PRIVATEKEY=""
       - SHUTTER_PUSH_METRICS_ENABLED=false
       - KEYPER_NAME=""
-      - ETHEREUM_WS=""
+      - ETHEREUM_WS=
       - SHUTTER_PUSH_LOGS_ENABLED=false
       - PUSHGATEWAY_USERNAME=""
       - PUSHGATEWAY_PASSWORD=""
